# synpareia

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
examples/: quickstart.py
src/synpareia/: __init__.py  block.py  commitment.py  hash.py  identity.py  proposal.py  signing.py  threshold.py  types.py
src/synpareia/anchor/: __init__.py  traversal.py  verify.py
src/synpareia/auth/: __init__.py  rfc9421.py
src/synpareia/chain/: __init__.py  export.py  operations.py  position.py
src/synpareia/policy/: __init__.py  builder.py  envelope.py  key_rotation.py  lifecycle.py  model.py  (+3 more)
tests/: conftest.py
tests/fuzz/: test_fuzz_primitives.py
tests/integration/: test_chain_sqlite.py  test_full_workflow.py  test_profile_client.py  test_witness_client.py
tests/property/: test_anchor_properties.py  test_chain_invariants.py  test_hash_properties.py
tests/unit/: test_anchor.py  test_block.py  test_chain.py  test_chain_export.py  test_close_read_2026_04_30.py  test_commitment.py  test_ephemeral_attestations.py  test_hash.py  test_identity.py  test_key_rotation.py  test_pentest_regressions_2026_05_06.py  test_policy.py  test_policy_lifecycle.py  test_policy_templates.py  test_policy_verify.py  test_profile_card.py  test_proposal.py  test_redteam_regressions.py  test_rfc9421.py  test_seal.py  test_signing.py  test_storage.py  test_threshold.py  test_topology.py  test_topology_aggregate.py  test_topology_erasure.py  test_topology_readtime.py  test_topology_tags.py
(+18 files in other folders)
