[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "synpareia"
version = "0.2.0"
description = "Cryptographic primitives for AI agent identity, attestation, and interaction verification"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=42.0",
]

[project.optional-dependencies]
sqlite = ["aiosqlite>=0.20"]
witness = ["httpx>=0.27"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.9",
    "mypy>=1.10",
    "httpx>=0.27",
    "fastapi>=0.115",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
]

[tool.hatch.build.targets.wheel]
packages = ["src/synpareia"]

[tool.ruff]
target-version = "py311"
line-length = 99
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
